k8s/local/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: olmap
  labels:
    name: olmap
    environment: local
